2006-08-09  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/Contacts/NGVCard+Contact.m ([NGVCard -asString]): new
	method that generates a textual representation of the vcard.

	* SoObjects/Contacts/NGVCard+Contact.[hm]: new class extension.

	* SoObjects/Contacts/SOGoContactGCSFolder.[hm]: new module name of
	"SOGoContactFolder".

	* SoObjects/Contacts/SOGoContactSource.h,
	SoObjects/Contacts/SOGoPersonalAB.[hm]: unused classes and
	protocols.

	* SoObjects/Contacts/NGLdapEntry+Contact.m ([NGLdapEntry
	-singleAttributeWithName:key]): new method that returns the first
	object associated with an ldap key (where generally one value is
	returned by key).
	([NGLdapEntry
	-asDictionaryWithAttributeNames:attributeNamesandCName:cName]):
	map the entry into an NSDictionary for processing by
	UIxContactsListViewBase.m with the least possible overhead.

	* SoObjects/Contacts/NGLdapEntry+Contact.[hm]: new class
	extension.

2006-08-04  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/SOGo/SOGoUserFolder.m ([SOGoUserFolder
	-privateContacts:inContext:]): now returns an instance of
	SOGoContactFolders.

	* UI/Contacts/UIxContactsListViewContainer.m
	([UIxContactsListViewContainer -contactFolderName]): new method to
	return the absolute path to the current contact folder, called
	from within the template.

	* UI/Templates/ContactsUI/UIxContactsListViewContainer.wox: added
	JS code to initialize the 'currentContactFolder' generic var.

	* SoObjects/Contacts/SOGoContactFolder.m ([SOGoContactFolder
	+contactFolderWithSource:inContainer:andName:]): new class
	method meant to return an instance connected to the specified
	source. Currently useless but won't be anymore in the next few
	days.

	* SoObjects/SOGo/SOGoUserFolder.h: commented out declaration of
	the "lookupFreeBusyObject" method since it does not exist.

	* UI/Contacts/UIxContactFoldersView.[hm]: new class module serving
	as a "view" for the SOGoContactFolders object. Does nothing but