@@ -1,56 +1,0 @@
-/*
-  Copyright (C) 2004-2005 SKYRIX Software AG
-
-  This file is part of OpenGroupware.org.
-
-  OGo is free software; you can redistribute it and/or modify it under
-  the terms of the GNU Lesser General Public License as published by the
-  Free Software Foundation; either version 2, or (at your option) any
-  later version.
-
-  OGo is distributed in the hope that it will be useful, but WITHOUT ANY
-  WARRANTY; without even the implied warranty of MERCHANTABILITY or
-  FITNESS FOR A PARTICULAR PURPOSE.  See the GNU Lesser General Public
-  License for more details.
-
-  You should have received a copy of the GNU Lesser General Public
-  License along with OGo; see the file COPYING.  If not, write to the
-  Free Software Foundation, 59 Temple Place - Suite 330, Boston, MA
-  02111-1307, USA.
-*/
-
-#ifndef __Contacts_SOGoContactObject_H__
-#define __Contacts_SOGoContactObject_H__
-
-#include <SOGo/SOGoContentObject.h>
-
-/*
-  SOGoContactObject
-  
-  Represents a single contact. This SOPE controller object manages all the
-  attendee storages (that is, it might store into multiple folders for meeting
-  appointments!).
-
-  Note: SOGoContactObject do not need to exist yet. They can also be "new"
-        appointments with an externally generated unique key.
-*/
-
-@class NSDictionary;
-@class NGVCard;
-
-@interface SOGoContactObject : SOGoContentObject
-{
-  id record; /* either an NSMutableDictionary or a NGVCard */
-}
-
-/* accessors */
-
-- (id)record;
-- (BOOL)isVCardRecord;
-- (NGVCard *)vCard;
-
-- (NSException *) saveRecord: (id) _record;
-
-@end
-
-#endif /* __Contacts_SOGoContactObject_H__ */
