@@ -1,5 +1,8 @@
 2006-08-09  Wolfgang Sourdeau  <wsourdeau@inverse.ca>
 
+	* SoObjects/Contacts/SOGoContactGCSEntry.[hm]: new module name of
+	"SOGoContactObject".
+
 	* SoObjects/Contacts/NGVCard+Contact.m ([NGVCard -asString]): new
 	method that generates a textual representation of the vcard.
 
